--- a/frontend/ukarfood/package.json
+++ b/frontend/ukarfood/package.json
@@ -18,8 +18,10 @@
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "axios": "^1.7.2",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1",
+    "recharts": "^2.12.7",
     "styled-components": "^6.1.11"
   },
   "devDependencies": {
